# NeoClausewitz

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/util/: constants.rs
