[package]
name = "NeoClausewitz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["rwh_06"] }
ash = { version = "0.38.0", features = ["linked", "debug", "std"] }
ash-window = { version = "0.13.0" }
raw-window-handle = "0.6"